--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMM Service - Profesyonel Sosyal Medya Hizmetleri</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#0A0E12">
+    <title>socialmedia - Profesyonel Sosyal Medya Hizmetleri</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +16,7 @@
         <div class="container">
             <div class="nav-brand" onclick="goToHome()">
                 <i class="fas fa-rocket"></i>
-                <span>SMM Service</span>
+                <span>socialmedia</span>
             </div>
             <div class="nav-balance">
                 <i class="fas fa-wallet"></i>
@@ -225,34 +228,12 @@
             </div>
         </div>
 
-        <!-- Order Status -->
-        <section class="status-section">
-            <div class="card">
-                <div class="card-header">
-                    <i class="fas fa-search"></i>
-                    <h2>Sipariş Durumu</h2>
-                </div>
-                <div class="card-body">
-                    <form id="statusForm">
-                        <div class="form-group">
-                            <label for="orderId">Sipariş ID</label>
-                            <input type="text" id="orderId" class="form-control" placeholder="12345" required>
-                        </div>
-                        <button type="submit" class="btn btn-secondary btn-block">
-                            <i class="fas fa-search"></i>
-                            Sorgula
-                        </button>
-                    </form>
-                    <div id="orderStatus" class="order-status"></div>
-                </div>
-            </div>
-        </section>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2026 SMM Service. Tüm hakları saklıdır.</p>
+            <p>&copy; 2026 socialmedia. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
