feat: move trust badges to footer with compact design

--- a/public/index.html
+++ b/public/index.html
@@ -71,30 +71,6 @@
                 </div>
             </section>
 
-            <!-- Trust Badges -->
-            <section class="trust-badges">
-                <div class="trust-item">
-                    <i class="fas fa-shield-check"></i>
-                    <span>SSL Güvenli</span>
-                </div>
-                <div class="trust-item">
-                    <i class="fas fa-lock"></i>
-                    <span>Şifre Gerektirmez</span>
-                </div>
-                <div class="trust-item">
-                    <i class="fas fa-headset"></i>
-                    <span>7/24 Destek</span>
-                </div>
-                <div class="trust-item">
-                    <i class="fas fa-bolt"></i>
-                    <span>Anında Teslimat</span>
-                </div>
-                <div class="trust-item">
-                    <i class="fas fa-check-double"></i>
-                    <span>%100 Güvenli</span>
-                </div>
-            </section>
-
             <section class="platform-selection">
                 <div class="platform-grid">
                     <div class="platform-card instagram" onclick="goToPlatform('instagram')">
@@ -233,6 +209,29 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
+            <!-- Trust Badges -->
+            <div class="trust-badges">
+                <div class="trust-item">
+                    <i class="fas fa-shield-check"></i>
+                    <span>SSL Güvenli</span>
+                </div>
+                <div class="trust-item">
+                    <i class="fas fa-lock"></i>
+                    <span>Şifre Gerektirmez</span>
+                </div>
+                <div class="trust-item">
+                    <i class="fas fa-headset"></i>
+                    <span>7/24 Destek</span>
+                </div>
+                <div class="trust-item">
+                    <i class="fas fa-bolt"></i>
+                    <span>Anında Teslimat</span>
+                </div>
+                <div class="trust-item">
+                    <i class="fas fa-check-double"></i>
+                    <span>%100 Güvenli</span>
+                </div>
+            </div>
             <p>&copy; 2026 socialmedia. Tüm hakları saklıdır.</p>
         </div>
     </footer>
